--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "title": "Landing page",
   "homepage": "http://www.yoursite.com.br",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": ">=1.3.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-sass": "^0.9.2",
